Set version of typescript to *
And remove typescript from the devDepedencies as there are no typescript files in this project

--- a/packages/eslint-config-q-node/package.json
+++ b/packages/eslint-config-q-node/package.json
@@ -14,10 +14,9 @@
   },
   "peerDependencies": {
     "eslint": "^7.3.1",
-    "typescript": "^3.9.5"
+    "typescript": "*"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "typescript": "^3.9.5"
+    "eslint": "^7.3.1"
   }
 }
