--- a/packages/eslint-config-q-base/package.json
+++ b/packages/eslint-config-q-base/package.json
@@ -11,11 +11,10 @@
   ],
   "peerDependencies": {
     "eslint": "^7.3.1",
-    "typescript": "^3.9.5"
+    "typescript": "*"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
-    "typescript": "^3.9.5"
+    "eslint": "^7.3.1"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.4.0",
