--- a/packages/eslint-config-q-base/package.json
+++ b/packages/eslint-config-q-base/package.json
@@ -10,16 +10,16 @@
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": "^7.3.1",
+    "eslint": "*",
     "typescript": "*"
   },
   "devDependencies": {
     "eslint": "^7.3.1"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.21.2"
+    "eslint-plugin-import": "^2.22.1"
   }
 }
