--- a/packages/eslint-config-q-base/package.json
+++ b/packages/eslint-config-q-base/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.1"
   }
 }
