--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ node_modules/
 # Visual Studio Code configuration
 .vscode/
 
+# Webstorm Code configuration
+.idea/
+
 # TypeScript build
 dist/
 build/
