--- a/packages/eslint-config-q-base/package.json
+++ b/packages/eslint-config-q-base/package.json
@@ -10,17 +10,18 @@
     "index.js"
   ],
   "peerDependencies": {
-    "eslint": "*",
-    "typescript": "*"
+    "eslint": "^8.9.0",
+    "typescript": "~4.5.5"
   },
   "devDependencies": {
-    "eslint": "^8.4.1"
+    "eslint": "^8.9.0",
+    "typescript": "~4.5.5"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
+    "@typescript-eslint/eslint-plugin": "~5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.25.3"
   }
 }
