--- a/packages/eslint-config-q-node/package.json
+++ b/packages/eslint-config-q-node/package.json
@@ -13,10 +13,10 @@
     "@qompium/eslint-config-q-base": "0.0.0"
   },
   "peerDependencies": {
-    "eslint": "^8.4.1",
-    "typescript": "*"
+    "eslint": "^8.9.0",
+    "typescript": "~4.5.5"
   },
   "devDependencies": {
-    "eslint": "^8.4.1"
+    "eslint": "^8.9.0"
   }
 }
