--- a/packages/eslint-config-q-react/package.json
+++ b/packages/eslint-config-q-react/package.json
@@ -11,17 +11,17 @@
   ],
   "dependencies": {
     "@qompium/eslint-config-q-base": "0.0.0",
-    "eslint-config-airbnb": "^19.0.2",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
   },
   "peerDependencies": {
-    "eslint": "^8.4.1",
-    "typescript": "*"
+    "eslint": "^8.9.0",
+    "typescript": "~4.5.5"
   },
   "devDependencies": {
-    "eslint": "^8.4.1"
+    "eslint": "^8.9.0"
   }
 }
