--- a/packages/eslint-config-q-node/package.json
+++ b/packages/eslint-config-q-node/package.json
@@ -10,7 +10,8 @@
     "index.js"
   ],
   "dependencies": {
-    "@qompium/eslint-config-q-base": "0.0.0"
+    "@qompium/eslint-config-q-base": "0.0.0",
+    "eslint-plugin-jest": "^26.1.1"
   },
   "peerDependencies": {
     "eslint": "^8.9.0",
