--- a/packages/eslint-config-q-react/package.json
+++ b/packages/eslint-config-q-react/package.json
@@ -19,7 +19,7 @@
   },
   "peerDependencies": {
     "eslint": "^8.9.0",
-    "typescript": "~4.5.5"
+    "typescript": "*"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
