--- a/packages/eslint-config-q-base/package.json
+++ b/packages/eslint-config-q-base/package.json
@@ -11,11 +11,10 @@
   ],
   "peerDependencies": {
     "eslint": "^8.9.0",
-    "typescript": "~4.5.5"
+    "typescript": ">= 4.5.5"
   },
   "devDependencies": {
-    "eslint": "^8.9.0",
-    "typescript": "~4.5.5"
+    "eslint": "^8.9.0"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "~5.12.0",
