--- a/packages/eslint-config-q-node/package.json
+++ b/packages/eslint-config-q-node/package.json
@@ -15,7 +15,7 @@
   },
   "peerDependencies": {
     "eslint": "^8.9.0",
-    "typescript": "~4.5.5"
+    "typescript": ">= 4.5.5"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
